// Copyright Â© 2020 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package paillier;

option go_package = "github.com/aisuosuo/alice/crypto/homo/paillier";

import "github.com/aisuosuo/alice/crypto/zkproof/message.proto";

message PubKeyMessage {
    zkproof.IntegerFactorizationProofMessage proof = 1;
    bytes g = 2;
}
