// Copyright Â© 2020 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package zkproof;

option go_package = "github.com/aisuosuo/alice/crypto/zkproof";

import "github.com/aisuosuo/alice/crypto/ecpointgrouplaw/point.proto";

message IntegerFactorizationProofMessage {
  bytes salt = 1;
  bytes publicKey = 2;
  bytes x = 3;
  bytes y = 4;
  bytes z = 5;
}

message SchnorrProofMessage {
  bytes salt = 1;
  ecpointgrouplaw.EcPointMessage V = 2;
  ecpointgrouplaw.EcPointMessage alpha = 3;
  bytes u = 4;
  bytes t = 5;
}
